Bugfix/web 3833 dashboard card overlapping

--- a/projects/campus-cloud/src/app/containers/controlpanel/dashboard/components/dashboard-campus-tile/dashboard-campus-tile.component.scss
+++ b/projects/campus-cloud/src/app/containers/controlpanel/dashboard/components/dashboard-campus-tile/dashboard-campus-tile.component.scss
@@ -23,6 +23,8 @@
   height: 373px;
   max-height: 373px;
   overflow-y: scroll;
+  position: relative;
+  z-index: 1;
 
   p {
     margin-bottom: 0;
